0.9.10 (Zope 2.11 edition)
- Switched to Zope3 interfaces.
- Removed broken profiler support.

0.9.9 (Zope 2.11 edition)
- transaction.commit(1) is deprecated in favor of transaction.savepoint(1).
- Don't break if Python distros ship without profile support (Debian, Ubuntu).
- Functional.publish() would hang if it got a request_method argument other
  than GET or HEAD while omitting the stdin argument.
- installProduct() now becomes a noop if ZopeTestCase did not apply its
  patches.
- Made functional doctests set cookie related headers.
- Made functional doctests set the Www-Authenticate header.
- Made sure logging is configured.
- Made base.TestCase a new-style class.
- Added placeless.py for Z3-style setup. Thanks to Whit Morriss.
- Fixed functional.http() to only pass the request body (no headers) to
  publish_module(). Thanks to Andreas Zeidler.
- Fixed doctestsuite factory to copy layers from test_class to the suite.
  Thanks to Whit Morris.
- Added hasPackage and installPackage functions for dealing with "products"
  registered via five:registerPackage.

0.9.8 (Zope 2.8 edition)
- Renamed 'doctest' package to 'zopedoctest' because of name-shadowing
  issues discovered during integration into Zope 2.8. Tests may still use
  'from Testing.ZopeTestCase import doctest' as the name is aliased there.
- Greatly improved the doctest story. ZopeTestCase now implements four test
  suite factories: ZopeDocTestSuite, ZopeDocFileSuite, FunctionalDocTestSuite,
  and FunctionalDocFileSuite.
- Removed warnhook.py, we now use the one from ZODB.tests.
- Removed doctest.py, we now use the one from zope.testing.
- Removed dochttp.py + test, we now use the one from zope.app.tests.
- ZopeLite now takes care not to monkey patch an already started Zope.
- PortalTestCase.setUp() no longer calls _refreshSkinData() as CMF is smart
  enough now.
- Fixed PortalTestCase._refreshSkinData() helper to work with CMF >= 1.5.